--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
   </head>
   <body>
     <div class="container">
+      <header class="header">
+        <div class="header-left">
+          <img src="img/logo-dark.png" alt="logo" />
+        </div>
+        <div class="header-right">
+          <nav>
+            <ul>
+              <li><a href="#"></a>HOME</li>
+              <li><a href="#"></a>ABOUT</li>
+              <li><a href="#"></a>SERVICES</li>
+              <li><a href="#"></a>CONTACT</li>
+            </ul>
+          </nav>
+          <div class="togle-icon"></div>
+        </div>
+      </header>
       <!-- do not change code below -->
       <script src="app.js"></script>
     </div>
