added banner css

--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
       <header class="header">
         <div class="header-left">
-          <img src="img/logo-dark.png" alt="logo" />
+          <img src="img/logo-dark.png" alt="logo" class="logo" />
         </div>
         <div class="header-right">
           <nav>
@@ -22,9 +26,26 @@
               <li><a href="#"></a>CONTACT</li>
             </ul>
           </nav>
-          <div class="togle-icon"></div>
+          <div class="togle-icon">
+            <i class="fa fa-search toggle"></i>
+            <i class="fa fa-bars toggle"></i>
+          </div>
+        </div>
+        <div class="header-banner">
+          <h1>Simplicity .</h1>
+
+          <h2>Build Your Online Identity Intuitively</h2>
         </div>
       </header>
+
+      <div class="content">
+        <h1>
+          We are a creative agency with a passion for design & developing
+          beautiful creations. We’ve had the privilege to work with some of the
+          largest names in the business and enjoy blogging about our projects
+          and adventures as often as possible
+        </h1>
+      </div>
       <!-- do not change code below -->
       <script src="app.js"></script>
     </div>
