--- a/index.html
+++ b/index.html
@@ -32,20 +32,61 @@
           </div>
         </div>
         <div class="header-banner">
-          <h1>Simplicity .</h1>
+          <h1 class="top">Simplicity .</h1>
 
-          <h2>Build Your Online Identity Intuitively</h2>
+          <p class="p">
+            <span>
+              Your Online Identity Intuitively
+              <p
+            /></span>
+          </p>
+
+          <button class="button">READ OUR BLOG</button>
         </div>
       </header>
 
       <div class="content">
         <h1>
           We are a creative agency with a passion for design & developing
-          beautiful creations. We’ve had the privilege to work with some of the
-          largest names in the business and enjoy blogging about our projects
-          and adventures as often as possible
+          beautiful creations. We’ve <br />
+          had the privilege to work with some of the largest names in the
+          business and enjoy blogging about our projects and adventures as often
+          as possible
         </h1>
       </div>
+
+      <section class="galary">
+        <a href="#">
+          <img src="#" alt="img" />
+        </a>
+        <a href="#">
+          <img src="#" alt="img" />
+        </a>
+        <a href="#">
+          <img src="#" alt="img" />
+        </a>
+        <a href="#">
+          <img src="#" alt="img" />
+        </a>
+        <a href="#">
+          <img src="#" alt="img" />
+        </a>
+        <a href="#">
+          <img src="#" alt="img" />
+        </a>
+        <a href="#">
+          <img src="#" alt="img" />
+        </a>
+        <a href="#">
+          <img src="#" alt="img" />
+        </a>
+        <a href="#">
+          <img src="#" alt="img" />
+        </a>
+        <a href="#">
+          <img src="#" alt="img" />
+        </a>
+      </section>
       <!-- do not change code below -->
       <script src="app.js"></script>
     </div>
