--- a/index.html
+++ b/index.html
@@ -56,36 +56,56 @@
       </div>
 
       <section class="galary">
-        <a href="#">
-          <img src="#" alt="img" />
-        </a>
-        <a href="#">
-          <img src="#" alt="img" />
-        </a>
-        <a href="#">
-          <img src="#" alt="img" />
-        </a>
-        <a href="#">
-          <img src="#" alt="img" />
-        </a>
-        <a href="#">
-          <img src="#" alt="img" />
-        </a>
-        <a href="#">
-          <img src="#" alt="img" />
-        </a>
-        <a href="#">
-          <img src="#" alt="img" />
-        </a>
-        <a href="#">
-          <img src="#" alt="img" />
-        </a>
-        <a href="#">
-          <img src="#" alt="img" />
-        </a>
-        <a href="#">
-          <img src="#" alt="img" />
-        </a>
+        <div class="item1">
+          <h2>BE MY GUEST</h2>
+          <p>February 15, 2015</p>
+          <p>By IQBALMAHMUD</p>
+        </div>
+        <div class="item2">
+          <h2>BE MY GUEST</h2>
+          <p>February 15, 2015</p>
+          <p>By IQBALMAHMUD</p>
+        </div>
+        <div class="item3">
+          <h2>BE MY GUEST</h2>
+          <p>February 15, 2015</p>
+          <p>By IQBALMAHMUD</p>
+        </div>
+        <div class="item4">
+          <h2>BE MY GUEST</h2>
+          <p>February 15, 2015</p>
+          <p>By IQBALMAHMUD</p>
+        </div>
+        <div class="item5">
+          <h2>BE MY GUEST</h2>
+          <p>February 15, 2015</p>
+          <p>By IQBALMAHMUD</p>
+        </div>
+        <div class="item6">
+          <h2>BE MY GUEST</h2>
+          <p>February 15, 2015</p>
+          <p>By IQBALMAHMUD</p>
+        </div>
+        <div class="item7">
+          <h2>BE MY GUEST</h2>
+          <p>February 15, 2015</p>
+          <p>By IQBALMAHMUD</p>
+        </div>
+        <div class="item8">
+          <h2>BE MY GUEST</h2>
+          <p>February 15, 2015</p>
+          <p>By IQBALMAHMUD</p>
+        </div>
+        <div class="item9">
+          <h2>BE MY GUEST</h2>
+          <p>February 15, 2015</p>
+          <p>By IQBALMAHMUD</p>
+        </div>
+        <div class="itemX">
+          <h2>BE MY GUEST</h2>
+          <p>February 15, 2015</p>
+          <p>By IQBALMAHMUD</p>
+        </div>
       </section>
       <!-- do not change code below -->
       <script src="app.js"></script>
