--- a/index.html
+++ b/index.html
@@ -61,51 +61,15 @@
           <p>February 15, 2015</p>
           <p>By IQBALMAHMUD</p>
         </div>
-        <div class="item2">
-          <h2>BE MY GUEST</h2>
-          <p>February 15, 2015</p>
-          <p>By IQBALMAHMUD</p>
-        </div>
-        <div class="item3">
-          <h2>BE MY GUEST</h2>
-          <p>February 15, 2015</p>
-          <p>By IQBALMAHMUD</p>
-        </div>
-        <div class="item4">
-          <h2>BE MY GUEST</h2>
-          <p>February 15, 2015</p>
-          <p>By IQBALMAHMUD</p>
-        </div>
-        <div class="item5">
-          <h2>BE MY GUEST</h2>
-          <p>February 15, 2015</p>
-          <p>By IQBALMAHMUD</p>
-        </div>
-        <div class="item6">
-          <h2>BE MY GUEST</h2>
-          <p>February 15, 2015</p>
-          <p>By IQBALMAHMUD</p>
-        </div>
-        <div class="item7">
-          <h2>BE MY GUEST</h2>
-          <p>February 15, 2015</p>
-          <p>By IQBALMAHMUD</p>
-        </div>
-        <div class="item8">
-          <h2>BE MY GUEST</h2>
-          <p>February 15, 2015</p>
-          <p>By IQBALMAHMUD</p>
-        </div>
-        <div class="item9">
-          <h2>BE MY GUEST</h2>
-          <p>February 15, 2015</p>
-          <p>By IQBALMAHMUD</p>
-        </div>
-        <div class="itemX">
-          <h2>BE MY GUEST</h2>
-          <p>February 15, 2015</p>
-          <p>By IQBALMAHMUD</p>
-        </div>
+        <div class="item2">2</div>
+        <div class="item3">3</div>
+        <div class="item4">4</div>
+        <div class="item5">5</div>
+        <div class="item6">6</div>
+        <div class="item7">7</div>
+        <div class="item8">8</div>
+        <div class="item9">9</div>
+        <div class="itemX">10</div>
       </section>
       <!-- do not change code below -->
       <script src="app.js"></script>
