finally done all css

--- a/index.html
+++ b/index.html
@@ -58,19 +58,112 @@
       <section class="galary">
         <div class="item1">
           <h2>BE MY GUEST</h2>
-          <p>February 15, 2015</p>
-          <p>By IQBALMAHMUD</p>
+          <p class="all">February 15, 2015</p>
+          <p class="all">By IQBALMAHMUD</p>
         </div>
-        <div class="item2">2</div>
-        <div class="item3">3</div>
-        <div class="item4">4</div>
-        <div class="item5">5</div>
-        <div class="item6">6</div>
-        <div class="item7">7</div>
-        <div class="item8">8</div>
-        <div class="item9">9</div>
-        <div class="itemX">10</div>
+        <div class="item2">
+          <h2>BE MY GUEST</h2>
+          <p class="all">February 15, 2015</p>
+          <p class="all">By IQBALMAHMUD</p>
+        </div>
+        <div class="item3">
+          <h2>BE MY GUEST</h2>
+          <p class="all">February 15, 2015</p>
+          <p class="all">By IQBALMAHMUD</p>
+        </div>
+        <div class="item4">
+          <h2>BE MY GUEST</h2>
+          <p class="all">February 15, 2015</p>
+          <p class="all">By IQBALMAHMUD</p>
+        </div>
+        <div class="item5">
+          <h2 class="all">BE MY GUEST</h2>
+          <p>February 15, 2015</p>
+          <p class="all">By IQBALMAHMUD</p>
+        </div>
+        <div class="item6">
+          <h2>BE MY GUEST</h2>
+          <p class="all">February 15, 2015</p>
+          <p class="all">By IQBALMAHMUD</p>
+        </div>
+        <div class="item7">
+          <h2>BE MY GUEST</h2>
+          <p class="all">February 15, 2015</p>
+          <p class="all">By IQBALMAHMUD</p>
+        </div>
+        <div class="item8">
+          <h2>BE MY GUEST</h2>
+          <p class="all">February 15, 2015</p>
+          <p class="all">By IQBALMAHMUD</p>
+        </div>
+        <div class="item9">
+          <h2>BE MY GUEST</h2>
+          <p class="all">February 15, 2015</p>
+          <p class="all">By IQBALMAHMUD</p>
+        </div>
+        <div class="itemX">
+          <h2>BE MY GUEST</h2>
+          <p class="all">February 15, 2015</p>
+          <p class="all">By IQBALMAHMUD</p>
+        </div>
       </section>
+
+      <article class="social-icon">
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-youtube"></i>
+        <i class="fa fa-instagram"></i>
+        <i class="fa fa-twitter"></i>
+      </article>
+
+      <footer class="footer">
+        <div class="div1">
+          <ul>
+            <li><a href="#"></a>Catagory</li>
+            <li><a href="#"></a>Fashion</li>
+            <li><a href="#"></a>Food for thought</li>
+            <li><a href="#"></a>Gaming</li>
+            <li><a href="#"></a>Music</li>
+            <li><a href="#"></a>Quotes</li>
+            <li><a href="#"></a>Uncategorized</li>
+          </ul>
+        </div>
+        <div class="div2">
+          <ul>
+            <li><a href="#"></a>Archives</li>
+            <li><a href="#"></a>February 2015</li>
+            <li><a href="#"></a>July 2014</li>
+            <li><a href="#"></a>March 2014</li>
+            <li><a href="#"></a>March 2013</li>
+            <li><a href="#"></a>February 2013</li>
+            <li><a href="#"></a>January 2012</li>
+            <!-- <li><a href="#"></a>Catagory</li> -->
+          </ul>
+        </div>
+        <div class="div3">
+          <ul>
+            <li><a href="#"></a>Recent Posts</li>
+            <li><a href="#"></a>Food for thought</li>
+            <li><a href="#"></a>Food for</li>
+            <li><a href="#"></a>Food thought</li>
+            <li><a href="#"></a>Catagory</li>
+            <li><a href="#"></a>Food for thought</li>
+            <li><a href="#"></a>Catagory</li>
+            <!-- <li><a href="#"></a>Catagory</li> -->
+          </ul>
+        </div>
+        <div class="div4">
+          <ul>
+            <li><a href="#"></a>About Salient</li>
+            <li><a href="#"></a>The Castle</li>
+            <li><a href="#"></a>Unit 345</li>
+            <li><a href="#"></a>2500 Castle Dr</li>
+            <li><a href="#"></a>Manhattan, NY</li>
+            <li><a href="#"></a>T: +216 (0)40 3629 4753</li>
+            <li><a href="#"></a>E: mdrad43@gmail.com</li>
+            <!-- <li><a href="#"></a>Catagory</li> -->
+          </ul>
+        </div>
+      </footer>
       <!-- do not change code below -->
       <script src="app.js"></script>
     </div>
